identified a bug with technician section sitting off center on mbile view - noted issue and added media query to css to see if issue resolves

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,10 @@ footer {
     .tech-about {
         padding-top: 70px;
     }
+
+    .technician-container {
+        margin: 10px 0;
+    }
 }
 
 /* ------------------ Medium Screens */
